# MSCS632-Advanced-Programming-Languages

./: .gitignore  README.md
Assignment_2/Part1_Semantics/: Python_features.py  cpp_features.cpp  js_features.js
Assignment_2/Part1_Syntax/: cpp_sum_correct.cpp  cpp_sum_error.cpp  javascript_sum_error.js  python_sum_error.py
Assignment_2/Part2_Memory/: .gitignore  memoryGC.java  memory_manual.cpp  memory_safety.rs
Assignment_4/: CmakeLists.txt  README.md  build_cpp.bat  gitignore
Assignment_4/Cpp/: CmakeLists.txt
Assignment_4/Cpp/include/: demo_data.h  employee.h  main_window.h  scheduler.h
Assignment_4/Cpp/src/: main.cpp  main_window.cpp  scheduler.cpp
Assignment_4/Python/: build_executable.sh  main.py  requirements.txt
Assignment_4/Python/gui/: main_window_impl.py
Assignment_4/Python/models/: __init__.py  employee.py
Assignment_4/Python/scheduler/: __init__.py  demo_data.py  scheduler.py
Assignment_4/shared/ui/: main_window.ui
Assignment_5/cpp/: CMakeLists.txt  README.md  build.bat
Assignment_5/cpp/include/: Driver.h  Ride.h  RideSystem.h  RideTypes.h  Rider.h
Assignment_5/cpp/src/: Driver.cpp  MainWindow.cpp  MainWindow.h  Ride.cpp  RideSystem.cpp  RideTypes.cpp  Rider.cpp  main.cpp
Assignment_5/cpp/ui/: MainWindow.ui
Assignment_5/smalltalk/: README.md  RideShare.st  expected_output.txt
Assignment_6/: .gitignore  README.md
Assignment_6/Go/: run.bat
Assignment_6/java/: run.bat
Assignment_7/: .gitignore  README.Md
Assignment_7/C/: run_c.bat  stats.c
Assignment_7/OCaml/: run_ocaml.bat  stats.ml
Assignment_7/Python/: run_python.bat  stats.py
Assignment_8/: README.md  family_tree.pl  run_prolog.bat
(+12 files in other folders)
